fix(app): Fix logo on mobile not clickable.

--- a/src/scss/base/_defaults.scss
+++ b/src/scss/base/_defaults.scss
@@ -28,7 +28,7 @@ main {
 }
 
 .mobile-logo {
-  z-index: 1;
+  z-index: 3;
   position: absolute;
   top: 3rem;
   left: 2rem;
